--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ tokio = { version = "1", features = ["full"] }
 plotters = "0.3"
 chrono = "0.4"
 tray-icon = "0.14"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
