--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ chrono = "0.4"
 tray-icon = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls"] }
+windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
 
