--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2024"
 
 [dependencies]
 winit = "0.30"
-window-vibrancy = "0.7"
 softbuffer = "0.4"
 yahoo_finance_api = "2.3"
 tokio = { version = "1", features = ["full"] }
@@ -14,5 +13,5 @@ chrono = "0.4"
 tray-icon = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
+windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
 
