--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ tray-icon = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
+auto-launch = "0.5.0"
 
