--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
-name: Release
+name: Build and Release (Windows)
 
 on:
   push:
     tags:
       - 'v*'
+
+  workflow_dispatch:
 
 jobs:
   build:
