--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "desktop-widget-rs"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2024"
 
 [dependencies]
@@ -16,4 +16,5 @@ serde_json = "1.0"
 windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
 auto-launch = "0.5.0"
 time = "0.3"
+self_update = { version = "0.42", features = ["archive-zip", "compression-zip-deflate"] }
 
