--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "desktop-widget-rs"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2024"
 
 [dependencies]
@@ -13,8 +13,11 @@ chrono = "0.4"
 tray-icon = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
+windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem"] }
+windows = { version = "0.52", features = ["Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_Foundation", "UI_Notifications", "Data_Xml_Dom", "Foundation"] }
 auto-launch = "0.5.0"
 time = "0.3"
 self_update = { version = "0.42", features = ["archive-zip", "compression-zip-deflate"] }
+notify-rust = "4.11.7"
+winreg = "0.52"
 
