--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,6 @@ notify-rust = "4.11.7"
 winreg = "0.52"
 iced = { version = "0.12", features = ["tokio", "svg"] }
 futures = "0.3"
+log = "0.4"
+env_logger = "0.11"
 
